# All the metadata about this project: name, description, etc

[metadata]
name = slapping
description = slap that like button
author = James Murphy
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
# NOTE: if this requires >=3.6, why 3 and 3 :: Only?
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
# ? package in package_dir to be built?
packages =
    slapping
# Just here for example, not really used in project code
# Note: version is not as specific as requirements.txt
install_requires =
    requests>=2
python_requires = >=3.6
# Note: this specifies where the package source is
package_dir =
    =src
# ?
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160